NS - Updating Users to add to API-Docs
